--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "debug": "4.3.1",
     "express": "4.17.1",
+    "mongoose": "^5.11.19",
     "morgan": "1.10.0",
     "nodemon": "2.0.7"
   },
