--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
       "PORT": 3000,
       "SERVER_URL": "localhost:3000"
     }
+  },
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
