--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.11.19",
     "morgan": "1.10.0",
     "nodemon": "2.0.7",
+    "sparql-http-client": "2.2.3",
     "sparqljs": "^3.4.1"
   },
   "nodemonConfig": {
