--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "debug": "4.3.1",
     "express": "4.17.1",
+    "googleapis": "^67.1.1",
     "mongoose": "^5.11.19",
     "morgan": "1.10.0",
     "nodemon": "2.0.7",
