--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "0.21.1",
     "debug": "4.3.1",
     "express": "4.17.1",
     "googleapis": "^67.1.1",
