--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "axios": "0.21.1",
     "debug": "4.3.1",
     "express": "4.17.1",
+    "express-session": "^1.17.1",
     "googleapis": "^67.1.1",
     "mongoose": "^5.11.19",
     "morgan": "1.10.0",
     "nodemon": "2.0.7",
+    "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "sparql-http-client": "^2.2.3",
     "sparqljs": "^3.4.1"
   },
