--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "0.21.1",
     "debug": "4.3.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "^1.17.1",
     "googleapis": "^67.1.1",
